fixed alignment in nav

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -84,7 +84,7 @@ a:hover {
 }
 
 .post {
-    margin: 1em 0;
+    margin: 0;
 }
 .post p {
   margin: 0;
@@ -95,8 +95,12 @@ a:hover {
 
 .post h3  {
     margin-bottom:0.2em;
+    margin-top: 0;
 }
 
+.post-title {
+  margin-top: 0;
+}
 .bio {
     margin-bottom:2.5em;
     font-size:22px;
@@ -183,6 +187,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .display {
     font-size:1.5em;
+    margin-top: 0;
 }
 .text-muted {
     color:rgb(136, 136, 136);
